--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             
             <div class="card reveal ">
                 <div class="card-img">
-                    <a target="_blank" href="https://osama24680.github.io/bookMarker/"><img src="images/book.jpg "
+                    <a target="_blank" href="https://osama24680.github.io/bookmarker/"><img src="images/book.jpg "
                             alt="work " /></a>
                 </div>
             </div>
