--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </div> -->
              <div class="card reveal ">
                 <div class="card-img">
-                    <a target="_blank" href="https://osama24680.github.io/weather/"><img src="images/weather.jpg "
+                    <a target="_blank" href="https://osama24680.github.io/globalWeather/"><img src="images/weather.jpg "
                             alt="work " /></a>
                 </div>
             </div>
