--- a/index.html
+++ b/index.html
@@ -242,6 +242,12 @@
                             alt="work " /></a>
                 </div>
             </div>
+              <div class="card reveal hideW">
+                <div class="card-img">
+                    <a target="_blank" href="https://osama24680.github.io/dashboard/"><img src="images/dashboard.png"
+                            alt="work " /></a>
+                </div>
+            </div>
 
             
             
