--- a/index.html
+++ b/index.html
@@ -228,6 +228,13 @@
                             src="images/thinking.png" alt="work " /></a>
                 </div>
             </div>
+            
+              <div class="card reveal hideW">
+                <div class="card-img">
+                    <a target="_blank" href="https://osama24680.github.io/comapany/"><img src="images/company.png"
+                            alt="work " /></a>
+                </div>
+            </div>
            
               <div class="card reveal hideW">
                 <div class="card-img">
