--- a/index.html
+++ b/index.html
@@ -167,6 +167,13 @@
                 </div>
             </div>
             
+               <div class="card reveal ">
+                <div class="card-img">
+                    <a target="_blank" href="https://osama24680.github.io/quiz/"><img src="images/quiz.png "
+                            alt="work " /></a>
+                </div>
+            </div>
+            
              <div class="card reveal ">
                 <div class="card-img">
                     <a target="_blank" href="https://osama24680.github.io/globalWeather/"><img src="images/weather.jpg "
