--- a/index.html
+++ b/index.html
@@ -122,6 +122,22 @@
                     </div>
                     <div class="line jquery"></div>
                 </div>
+                
+                <div class="bar">
+                    <div class="info">
+                        <span>Sass</span>
+                        <span>70%</span>
+                    </div>
+                    <div class="line sass"></div>
+                </div>
+                
+                <div class="bar">
+                    <div class="info">
+                        <span>Adobe XD</span>
+                        <span>60%</span>
+                    </div>
+                    <div class="line xd"></div>
+                </div>
 
                 <div class="bar">
                     <div class="info">
