--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 
 
 
-    <div id="load">
+<!--     <div id="load">
         <div class="sk-cube-grid spinLoader">
             <div class="sk-cube sk-cube1"></div>
             <div class="sk-cube sk-cube2"></div>
@@ -473,7 +473,7 @@
             <div class="sk-cube sk-cube8"></div>
             <div class="sk-cube sk-cube9"></div>
         </div>
-    </div>
+    </div> -->
 
 
     <button class="arrowUp">
