--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 <p class="paragraph_text">
                     I'm a student at AAST, I study Engineering, Electronics and communication department , it's the
                     second year to me at the college. I was so interested about web development specially the front-end
-                    career so I started to learn it 4 months ago and i have
-                    accomplished many websites which are real and virtual and i am so excited to start work with you
+                    career so I started to learn it for over than a year and I have
+                    accomplished many websites which are real and virtual and I am so excited to start work with you
                     <br /><br /> Beside I've some skills in editing photos with photoshop, it was a nice experience for
                     me to be able to create, change, or even edit photos for my field
                 </p>
@@ -78,8 +78,8 @@
             <div class="column col-left reveal">
                 <h2 class="content-title">My Skills and Experience</h2>
                 <p>
-                    Out of my experience, I can create professional websites by HTML, CSS, Bootstrap, Vanilla
-                    JavaScript, Jquery and sooner I.S.A. I will be able to use React library
+                    Out of my experience, I can create professional websites using HTML, CSS, Bootstrap, Sass, Vanilla
+                    JavaScript, Jquery and React library
 
                 </p>
                 <a href="#work" class="btn">see my work</a>
